Section 13: Updated app